--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
